# TrustSC

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.en.md  README.md
.github/workflows/: ci.yml
adapters/mdux-vulkan-winit/: Cargo.toml
adapters/mdux-vulkan-winit/shaders/: flat.vert  heightfield.frag  heightfield.vert  hello_text.vert
adapters/mdux-vulkan-winit/src/: lib.rs  offscreen.rs  renderer.rs  verify.rs
adapters/trustsc-vulkan-winit/: Cargo.toml
adapters/trustsc-vulkan-winit/shaders/: flat.frag  heightfield.vert  hello_text.frag  image.frag  image.vert
adapters/trustsc-vulkan-winit/src/: lib.rs  offscreen.rs  renderer.rs  verify.rs
crates/mdux/: Cargo.toml  build.rs
crates/mdux-build/: Cargo.toml
crates/mdux-image-schema/: Cargo.toml
crates/mdux-ml-authoring/: Cargo.toml
crates/mdux-ml-runtime/: Cargo.toml
crates/mdux-ml-schema/: Cargo.toml
crates/mdux-ui-dsl-authoring/: Cargo.toml
crates/mdux-ui-dsl-authoring/src/: lib.rs
crates/mdux-ui-verify/: Cargo.toml
crates/mdux/src/: input.rs  lib.rs  realtime.rs  screen_text.rs  standard_images.rs  standard_text.rs  verify_scenario.rs
crates/mdux/tests/: framework.rs  hello_world.rs
crates/trustsc/: Cargo.toml  build.rs
crates/trustsc-build/: Cargo.toml
crates/trustsc-core/: Cargo.toml
crates/trustsc-governance/: Cargo.toml
crates/trustsc-image-schema/: Cargo.toml
crates/trustsc-ml-authoring/: Cargo.toml
crates/trustsc-ml-runtime/: Cargo.toml
crates/trustsc-ml-schema/: Cargo.toml
crates/trustsc-text-authoring/: Cargo.toml
crates/trustsc-text-runtime/: Cargo.toml
crates/trustsc-text-schema/: Cargo.toml
crates/trustsc-ui/: Cargo.toml
crates/trustsc-ui-dsl-authoring/: Cargo.toml
crates/trustsc-ui-dsl-authoring/src/: ast.rs  catalog.rs  diagnostic.rs  lib.rs  serialize.rs
crates/trustsc-ui-verify/: Cargo.toml
crates/trustsc/src/: input.rs  lib.rs  realtime.rs  screen_text.rs  standard_images.rs  standard_text.rs  verify_scenario.rs
crates/trustsc/tests/: framework.rs  hello_world.rs
docs/: README.md  architecture.md  getting-started.md  regulatory-compliance.md
docs/adr/: ADR-001-safety-critical-text-rendering-architecture.md  ADR-002-reproducible-font-asset-pipeline.md  ADR-005-pure-rust-project-boundary-and-dependency-policy.md  ADR-006-vulkan-versus-vulkansc-profile-strategy.md  ADR-007-compliance-evidence-and-generated-artifact-ownership.md  ADR-008-deterministic-medui-dsl-boundary.md  ADR-009-medui-compilation-and-generated-artifacts.md  ADR-010-medui-i18n-and-text-budget-policy.md  ADR-011-medui-safety-monitor-and-vulkan-viewport-contract.md  ADR-012-presentation-adapter-crates-and-shader-artifacts.md  ADR-013-host-preview-and-bounded-realtime-contract.md  ADR-014-precise-positioning-and-image-asset-governance.md  ADR-015-widget-organization-principles.md  ADR-016-automated-ui-verification-and-manual-generation.md  ADR-017-zero-soup-ml-inference-pipeline.md  ADR-018-signal-trace-node.md  ADR-019-regulatory-standards-reference-corpus.md  ADR-020-ai-interaction-standardization.md  ADR-021-repository-migration-to-trustsc.md  ADR-022-medui-studio-hosted-designer.md  README.md
docs/dsl/: build-integration.md  component-dictionary.md  language-reference.md  overview.md  safety-monitor-contract.md  style-guide.md
docs/governance/: citation-convention.md  soup-register.toml
docs/iec62304/: 01-scope-and-general-requirements.md  02-development-planning-and-requirements.md  03-development-design.md  04-development-implementation-and-testing.md  05-maintenance-process.md  06-risk-management-process.md  07-configuration-management-process.md  08-problem-resolution-process.md  AI-Reference.md  README.md
docs/iec62366/: 01-scope-and-general-requirements.md  02-use-specification-and-ui-design.md  03-formative-and-summative-evaluation.md  AI-Reference.md  README.md
docs/iec81001/: 01-scope-and-relationship-to-iec62304.md  02-security-risk-management.md  03-secure-design-and-implementation.md  04-security-verification-and-update-management.md  AI-Reference.md  README.md
docs/iso13485/: 01-foundations-and-qms.md  02-management-and-resources.md  03-product-realisation.md  04-measurement-analysis-improvement.md  AI-Reference.md  README.md
docs/iso14971/: 01-scope-and-general-requirements.md  02-risk-analysis-and-evaluation.md  03-risk-control-and-residual-risk.md  04-production-and-post-production.md  AI-Reference.md  README.md
docs/verification/: ui-verification.md
examples/class_b_device/: Cargo.toml
examples/class_c_monitor/: Cargo.toml  build.rs  neurosense.medui
examples/class_c_vulkansc_device/: Cargo.toml
examples/hello_world/: Cargo.toml  build.rs  hello_world.medui
examples/hello_world/src/: hello_text.rs  main.rs  medui_screen.rs  vulkan_window.rs
software_development_file/: README.md
tools/mdux-docs-lint/: Cargo.toml
tools/mdux-font-baker/: Cargo.toml
tools/mdux-font-baker/fixtures/: roboto-demo.toml  roboto-display-160px.toml  roboto-display-48px.toml
tools/mdux-font-baker/src/: lib.rs  main.rs
tools/mdux-image-baker/: Cargo.toml
tools/mdux-image-baker/fixtures/: acme-logo.toml
tools/mdux-image-baker/src/: lib.rs  main.rs
tools/mdux-ml-baker/: Cargo.toml
tools/mdux-ml-baker/fixtures/: eeg-demo.toml
tools/mdux-ml-baker/src/: lib.rs  main.rs
tools/mdux-shader-baker/: Cargo.toml
tools/trustsc-image-baker/: Cargo.toml
tools/trustsc-image-baker/fixtures/: acme-logo.toml
tools/trustsc-image-baker/src/: lib.rs  main.rs
tools/trustsc-medui-studio/: Cargo.toml  Dockerfile  MANUAL_TESTS.md  README.md  docker-compose.yml  entrypoint.sh
tools/trustsc-medui-studio/frontend/: package-lock.json  package.json  tsconfig.json
tools/trustsc-medui-studio/frontend/src/: api.ts  app.ts  ast.ts  changes.ts  dom.ts  editor.ts  index.html  inspector.ts  kind-props.ts  overlay.ts  palette-defaults.ts  propose.ts  styles.css
tools/trustsc-medui-studio/src/: api.rs  dto.rs  main.rs  proposals.rs  render_bridge.rs
tools/trustsc-ml-baker/: Cargo.toml
tools/trustsc-ml-baker/src/: lib.rs  main.rs
(+98 files in other folders)
