[workspace]
members = [
    "crates/mdux-core",
    "crates/mdux-governance",
    "crates/mdux-ui",
    "crates/mdux-ui-dsl-authoring",
    "crates/mdux",
    "crates/mdux-text-schema",
    "crates/mdux-text-authoring",
    "crates/mdux-text-runtime",
    "examples/hello_world",
    "examples/class_b_device",
    "examples/class_c_vulkansc_device",
    "tools/mdux-font-baker",
]
resolver = "2"
