[workspace]
members = [
    "adapters/mdux-vulkan-winit",
    "crates/mdux-core",
    "crates/mdux-governance",
    "crates/mdux-image-schema",
    "crates/mdux-ml-authoring",
    "crates/mdux-ml-runtime",
    "crates/mdux-ml-schema",
    "crates/mdux-ui",
    "crates/mdux-ui-dsl-authoring",
    "crates/mdux-ui-verify",
    "crates/mdux",
    "crates/mdux-build",
    "crates/mdux-text-schema",
    "crates/mdux-text-authoring",
    "crates/mdux-text-runtime",
    "examples/hello_world",
    "examples/class_b_device",
    "examples/class_c_monitor",
    "examples/class_c_vulkansc_device",
    "tools/mdux-font-baker",
    "tools/mdux-image-baker",
    "tools/mdux-shader-baker",
]
resolver = "2"
