[workspace]
members = [
    "adapters/trustsc-vulkan-winit",
    "crates/trustsc-core",
    "crates/trustsc-governance",
    "crates/trustsc-image-schema",
    "crates/trustsc-ml-authoring",
    "crates/trustsc-ml-runtime",
    "crates/trustsc-ml-schema",
    "crates/trustsc-ui",
    "crates/trustsc-ui-dsl-authoring",
    "crates/trustsc-ui-verify",
    "crates/trustsc",
    "crates/trustsc-build",
    "crates/trustsc-text-schema",
    "crates/trustsc-text-authoring",
    "crates/trustsc-text-runtime",
    "examples/hello_world",
    "examples/class_b_device",
    "examples/class_c_monitor",
    "examples/class_c_vulkansc_device",
    "tools/trustsc-docs-lint",
    "tools/trustsc-font-baker",
    "tools/trustsc-image-baker",
    "tools/trustsc-ml-baker",
    "tools/trustsc-shader-baker",
]
resolver = "2"
