[package]
name = "mdux"
version = "0.1.0"
edition = "2024"

[dependencies]
mdux-core = { path = "../mdux-core" }
mdux-governance = { path = "../mdux-governance" }
mdux-text-authoring = { path = "../mdux-text-authoring" }
mdux-text-runtime = { path = "../mdux-text-runtime" }
mdux-text-schema = { path = "../mdux-text-schema" }
mdux-ui = { path = "../mdux-ui" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
