[package]
name = "trustsc-ui-dsl-authoring"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
trustsc-core = { path = "../trustsc-core" }
trustsc-image-schema = { path = "../trustsc-image-schema" }
trustsc-ui = { path = "../trustsc-ui" }
trustsc-text-schema = { path = "../trustsc-text-schema" }

[dev-dependencies]
trustsc = { path = "../trustsc" }
