[package]
name = "mdux-font-baker"
version = "0.1.0"
edition = "2024"

[dependencies]
fontdue = "0.9.3"
mdux-core = { version = "0.1.0", path = "../../crates/mdux-core" }
mdux-text-authoring = { version = "0.1.0", path = "../../crates/mdux-text-authoring" }
mdux-text-schema = { version = "0.1.0", path = "../../crates/mdux-text-schema" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
toml = "1.1.2"
