[package]
name = "mdux-image-baker"
version = "0.1.0"
edition = "2024"

[dependencies]
mdux-core = { version = "0.1.0", path = "../../crates/mdux-core" }
mdux-image-schema = { version = "0.1.0", path = "../../crates/mdux-image-schema" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
toml = "1.1.2"
