[package]
name = "trustsc-ml-baker"
version = "0.1.0"
edition = "2024"

[dependencies]
trustsc-core = { version = "0.1.0", path = "../../crates/trustsc-core" }
trustsc-ml-schema = { version = "0.1.0", path = "../../crates/trustsc-ml-schema" }
trustsc-ml-authoring = { version = "0.1.0", path = "../../crates/trustsc-ml-authoring" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
toml = "1.1.2"

[dev-dependencies]
trustsc-ml-runtime = { version = "0.1.0", path = "../../crates/trustsc-ml-runtime" }
